--- a/src/components/Notepad/Notepad.css
+++ b/src/components/Notepad/Notepad.css
@@ -2,8 +2,8 @@
 .notepad-textarea {
   width: 100%;
   height: 325px;
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 16px;
+  font-family: 'Patrick Hand', cursive;
+  font-size: 20px;
   padding-left: 15px;
   padding-right: 15px;
   border-radius: 8px;
