--- a/src/components/NoteBook/NoteBook.css
+++ b/src/components/NoteBook/NoteBook.css
@@ -16,10 +16,6 @@
     align-items: center;
 }
 
-.experience-bullet-points-overall{
-    /* margin-top: -10px;  */
-
-}
 
 
 
@@ -29,34 +25,11 @@
 
 }
 
-.page {
-  flex: 1;
-  color: black;
-  font-family: 'Gloria Hallelujah', cursive;
-  font-size: 18px;
-  line-height: 25px; 
-  border: none;
-  outline: none;
-  resize: none;
-  background-image: repeating-linear-gradient(
-    to bottom,
-    #fefefe,
-    #fefefe 24px,
-    #f0f0f0 25px
-  );
-  white-space: pre-wrap;
-  text-align: left;
-  padding-left: 40px;
-  overflow-y: scroll;
-}
-
 
 
 .page h1{
-  /* padding-top: 5%; */
     font-size: 20px;
     text-align: center;
-    padding-right: 40px;
     text-decoration: underline wavy #312d2a;
     text-underline-offset: 6px;
     margin-bottom: 7%;
@@ -66,7 +39,10 @@
 
 .notebook-experience{
   font-size: 16px;
-  padding: 0px;
+  padding: 30px;
+  padding-bottom: 0px;
+  padding-top: 0px;
+  /* background-color: #312d2a; */
 
 }
 
@@ -90,14 +66,14 @@
   font-weight: 200;
   margin-top: 0;
   margin-bottom: 0;
-
+  margin-left: 10px;
 }
 
 .notebook-container {
     display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 40px;
+  gap: 10px;
 
   width: 80%;
   height: 80vh;
@@ -136,7 +112,6 @@
     flex: 1;
     min-width: 300px;
     padding: 20px;
-    background-color: #fffde7;
     border-radius: 8px;
     box-shadow: 0 2px 6px rgba(0,0,0,0.1);
     white-space: pre-wrap;
