--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@
   width: 100%;
   height: 100vh;           
   overflow-y: scroll;      
-  scroll-snap-type: y mandatory; 
   scroll-behavior: smooth; 
   margin: 0;
   padding: 0;
@@ -114,9 +113,7 @@
   /* width: 80%; */
   margin: 30px auto;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  /* padding-left: 50px; */
-  /* padding-right: 50px; */
-  padding-bottom: 5%;
+  
 }
 
 .project-layout-container {
@@ -134,7 +131,7 @@ html, body {
 }
 
 body {
-  scroll-snap-type: y mandatory; 
+  /* scroll-snap-type: y mandatory;  */
   overflow-y: scroll;
   height: 100vh; 
 }
