--- a/src/components/IntroBanner/IntroBanner.css
+++ b/src/components/IntroBanner/IntroBanner.css
@@ -1,46 +1,34 @@
 .intro-banner-container {
-    text-align: center;
     font-style:oblique;
-    font-size: clamp(22px, 4vw, 50px);
+    font-size: clamp(26px, 4vw, 50px);
     padding: 20px;
     color: black;
-    height: '100vh';
     max-width: 70%;
     margin: auto;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     gap: 20px; 
-      font-family: 'Patrick Hand', cursive;
-
-
+    font-family: 'Patrick Hand', cursive;
   }
 
 .intro-banner-left-panel {
   flex: 1;
-  align-items: center;
-  justify-content: center;
-  padding-right: 0px;
-  gap: 20px;  
-  box-sizing: border-box;
+  display: flex;                  
+  flex-direction: column;         
+  justify-content: center;        
+  align-items: center;           
+  text-align: center;             
 }
 
 .intro-banner-left-panel-header-name{
-  padding: 20px;
-  align-items: center;
-  align-items: center;
-  justify-content: center;
-
+  margin: 0;
+  padding: 10px;
 }
 
 .intro-banner-left-panel-header-role{
-  flex: 1;
-  overflow: hidden;  
-  white-space: pre-wrap;
-  font-size: clamp(10px, 2vw, 32px);
-  align-items: center;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
+  padding: 10px;
+  font-size: clamp(14px, 2vw, 32px);
 
 }
 
@@ -58,4 +46,5 @@
   object-fit: cover;
   display: block;
   margin: 0 auto;
+  height: 100%;
 }
