--- a/src/components/Notepad/Notepad.css
+++ b/src/components/Notepad/Notepad.css
@@ -3,7 +3,7 @@
   width: 100%;
   height: 325px;
   font-family: 'Patrick Hand', cursive;
-  font-size: 20px;
+  font-size: clamp(16px, 4vw, 20px);
   padding-left: 15px;
   padding-right: 15px;
   border-radius: 8px;
