--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -4,7 +4,7 @@
 .background-portfolio-wall {
   background-color: #f4efe2; 
   gap: 70px;
-  padding: 40px;
+  padding: 2%;
   justify-items: center;
   height: 100%;
   width: 80%;
@@ -21,7 +21,7 @@
   padding: 40px;
   justify-items: center;
   height: 100%;
-  width: 100%;
+  width: auto;
 }
 
 
@@ -52,12 +52,13 @@
   position: relative; 
   z-index: 1;
   background-color: white;
-  width: 250px;
-  height: 80%;
+  width: 90%;
+  height: auto;
   padding: 20px 15px 40px 15px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* align-items: center; */
+  -webkit-perspective:1000px ;
 }
 
 .project-card::before,
@@ -72,21 +73,25 @@
   top: -0px;
   z-index: 80;
   transform: rotate(-8deg);
+  -webkit-transform: rotateY(-8deg);
   filter: brightness(1.1);
 }
 
 .project-card::before {
   left: -7%;
   transform: rotate(-27deg);
+  -webkit-transform: rotateY(-27deg);
 }
 
 .project-card::after {
   right: -19px;
   transform: rotate(27deg);
+  -webkit-transform: rotateY(-27deg);
 }
 
 .project-card:hover {
   transform: scale(1.03);
+  -webkit-transform: scale(1.03);
 }
 .project-card img {
   width: 100%;       
@@ -164,12 +169,14 @@ font-family: 'Gloria Hallelujah', cursive;
 
 .project-card.flipped .card-inner {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 
 .card-front, 
 .card-back {
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
 }
 
 .card-back li {
@@ -188,6 +195,7 @@ font-family: 'Gloria Hallelujah', cursive;
   height: 100%;
   transition: transform 0.6s;
   transform-style: preserve-3d;
+  -webkit-transform-style: preserve-3d;
 }
 
 
@@ -199,7 +207,9 @@ font-family: 'Gloria Hallelujah', cursive;
   width: 100%;
   height: 100%;  
   backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
   overflow-y: auto;  /* enable scroll */
   padding: 20px;
   box-sizing: border-box;
@@ -239,8 +249,7 @@ font-family: 'Gloria Hallelujah', cursive;
 
 @media (max-width: 768px) {
   .project-card {
-    padding: 25px 20px 50px 20px; 
-    width: 90%;                  
+    align-items: center;                 
   }
 
   .project-card::before,
@@ -248,6 +257,11 @@ font-family: 'Gloria Hallelujah', cursive;
     width: 50px;
     height: 12px;
     top: -8px;              
+  }
+
+  .portfolio-wall{
+      justify-content: center; 
+
   }
 
 }
